# cinnabar

./: .README.md.kate-swp  .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CREDITS.md  CinnabarEngine.sln  README.md  action.yml  annotated_dup.js  arch.dockerfile  ce_notes.md  cinnabar.kdev4  clang-format--  create-deb.sh  dir_79897dd12085411cb2179204b40bf38b.html  dir_b4588f22dabb929260c1f97f00410727.html  dir_b4588f22dabb929260c1f97f00410727.js  dir_ec902d0b5c1d332f4204488f95da7c93.js  files.html  functions.html  functions_eval.html  functions_func.html  functions_type.html  functions_vars.html  gitflow.sh  globals.html  globals_defs.html  globals_func.html  index.html  linux-readme.txt  menudata.js  namespacemembers.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  (+2 more)
.github/workflows/: CD.yml  Doxygen.yml  UnitTests.yml  codeql-analysis.yml
.kdev4/: cinnabar.kdev4
CinnabarEngine/: CinnabarEngine.vcxproj  CinnabarEngine.vcxproj.filters  ClassDiagram.cd  cpp.hint  extentions.txt  plan
CinnabarEngine/shaders/: basic.vert
CinnabarEngine/src/: main.cpp  stb_image.h
CinnabarEngine/src-old/: ce_util.h  main.cpp
arch/: dockerfile
arch/core/: PKGBUILD
arch/render/: PKGBUILD
d0/d8a/: camera_8hpp.html  camera_8hpp_source.html
d1/d03/: cinnabar-core_2asset__manager_8hpp.js
debian/: control
dep/: CMakeLists.txt  Findglm.cmake  modues.txt
dep/glad/: CMakeLists.txt
dep/glad/glad/: glad.h
dep/glew/: CMakeLists.txt
dep/glew-include/: CMakeLists.txt
docs/: Gemfile  README_8md.html  _2github_2workspace_2src_2cinnabar-render-demo_2main_8cpp-example.html  _config.yml  annotated.html  annotated_dup.js  assets_8hpp.html  assets_8hpp_source.html  camera_8hpp.html  camera_8hpp_source.html  cinnabar-core_2asset__manager_8hpp.html  cinnabar-core_2asset__manager_8hpp.js  cinnabar-core_2asset__manager_8hpp_source.html  cinnabar-render_2asset__manager_8hpp.html  cinnabar-render_2asset__manager_8hpp.js  cinnabar-render_2asset__manager_8hpp_source.html  cinnabar-render_8hpp.html  cinnabar-render_8hpp_source.html  classce_1_1Camera-members.html  classce_1_1Camera.html  classce_1_1Camera.js  classce_1_1Material-members.html  classce_1_1Material.html  classce_1_1Material.js  classce_1_1Mesh-members.html  classce_1_1Mesh.html  classce_1_1Mesh.js  classce_1_1RenderEngine-members.html  classce_1_1RenderEngine.html  classce_1_1RenderEngine.js  classce_1_1Shader-members.html  classce_1_1Shader.html  classce_1_1Shader.js  classce_1_1Texture-members.html  classce_1_1Texture.html  classce_1_1Texture.js  classce_1_1Time-members.html  classce_1_1Time.html  classce_1_1Time.js  classce_1_1Transform-members.html  (+88 more)
doxygen/: 404.md  cinnabar-core.doxyfile  cinnabar-render.doxyfile  doxyfile
engine/: .main.cpp.kate-swp  CMakeLists.txt  ce_assets.h  ce_event_handler.h  ce_math.h  ce_module_api.cpp  ce_render_fundementals.h  ce_rendering.h  ce_util.h  main.cpp
engine/core/: module.h  time.cpp  time.h  tpnt_log.h  window.cpp  window.h
engine/managers/: asset_manager.cpp  asset_manager.h  module_manager.cpp  module_manager.h
engine/math/: transform.cpp  transform.h
engine/rendering/: camera.cpp  camera.h  ce_gl.h  material.cpp  material.h  mesh.cpp  mesh.h  render_command.h  render_engine.cpp  render_engine.h  rendering_engine.cpp  rendering_engine.h  shader.cpp  shader.h  texture.cpp  texture.cpp.tmp  texture.h  texture.h.tmp  vertex.h
github-scripts/: arch.sh  debian.sh  projects.txt  test.sh  windows.bat
packaging/: arch.dockerfile  create-arch.sh  create-deb.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  (+54 more)
src/: CMakeLists.txt  ce_assets.h  ce_event_handler.h  ce_render_fundementals.h  ce_rendering.h  glad.c  logger.cpp  main.cpp
src/cinnabar-core/: CMakeLists.txt  asset_manager.cpp  time.cpp  transform.cpp
src/cinnabar-engine/: CMakeLists.txt  ce_assets.h  cinnabar-render.h  cinnabar-render.hpp
src/cinnabar-engine/cinnabar-core/: CMakeLists.txt  transform.cpp
src/cinnabar-engine/cinnabar-render/: asset_manager.cpp  camera.hpp  cinnabar-render.hpp  material.cpp  material.hpp  render_engine.cpp  render_engine.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  window.cpp
src/cinnabar-engine/core/: CMakeLists.txt  time.cpp  tpnt_log.h  transform.cpp  transform.h  transform.hpp  window.cpp  window.h
src/cinnabar-engine/math/: transform.cpp  transform.h
src/cinnabar-engine/render/: CMakeLists.txt  asset_manager.cpp  asset_manager.h  asset_manager.hpp  assets.h  assets.hpp  camera.cpp  camera.h  camera.hpp  material.h  mesh.cpp  mesh.h  mesh.hpp  render_engine.cpp  render_engine.h  render_engine.hpp  shader.cpp  shader.h  shader.hpp  texture.cpp  texture.h  window.cpp  window.h
src/cinnabar-engine/rendering/: camera.h  mesh.h  render_engine.h  shader.h  texture.cpp
src/cinnabar-render/: CMakeLists.txt  asset_manager.cpp  camera.cpp  framebuffer.cpp  material.cpp  mesh.cpp  render_engine.cpp  shader.cpp  texture.cpp  types.cpp  window.cpp
src/cinnabar-render-demo/: CMakeLists.txt  main.cpp
src/core/: logger.h  module.h  time.h  tpnt_log.h  window.cpp  window.h
src/demo/: CMakeLists.txt  main.cpp
src/managers/: asset_manager.cpp  asset_manager.h  module_manager.cpp  module_manager.h
src/math/: transform.cpp  transform.h
src/rendering/: .text.h.kate-swp  camera.cpp  camera.h  ce_gl.h  material.cpp  material.h  mesh-no.cpp  mesh-no.h  mesh.cpp  mesh.h  render_engine.cpp  render_engine.h  shader.cpp  shader.h  text.cpp  text.h  texture.cpp  texture.h  vertex.h
tests/: arch.sh  debian.sh  windows.bat
(+380 files in other folders)
