set(BUILD_SHARED_LIBS TRUE)
find_package(PkgConfig REQUIRED)

# find_library(STD_CPP_FS stdc++fs)
# message(NOTICE "STD_CPP_FS_LIBRARY " ${OPENGL_LIBRARY})
# message(NOTICE "STD_CPP_FS_LIBRARIES " ${OPENGL_LIBRARIES})
# message(NOTICE "STD_CPP_FS_INCLUDE_DIR " ${OPENGL_INCLUDE_DIR})

# OpenGL
cmake_policy(SET CMP0072 NEW)
find_package(OpenGL REQUIRED)
include_directories(${OPENGL_INCLUDE_DIR})
if(UNIX)
set(OPENGL_LIBRARY ${OPENGL_opengl_LIBRARY})
ENDIF()
if(WIN32)
set(OPENGL_LIBRARY ${OPENGL_gl_LIBRARY})
ENDIF()
message(NOTICE "OPENGL_LIBRARY " ${OPENGL_LIBRARY})
message(NOTICE "OPENGL_LIBRARIES " ${OPENGL_LIBRARIES})
message(NOTICE "OPENGL_INCLUDE_DIR " ${OPENGL_INCLUDE_DIR})

# glew
find_package(GLEW REQUIRED)
include_directories(${GLEW_INCLUDE_DIRS})
message(NOTICE "GLEW_LIBRARIES " ${GLEW_LIBRARIES})
message(NOTICE "GLEW_INCLUDE_DIRS " ${GLEW_INCLUDE_DIRS})

# SDL
find_package(SDL2 REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS})
message(NOTICE "SDL2_LIBRARY " ${SDL2_LIBRARY})
message(NOTICE "SDL2MAIN_LIBRARY " ${SDL2MAIN_LIBRARY})
message(NOTICE "SDL2_LIBRARIES " ${SDL2_LIBRARIES})
message(NOTICE "SDL2_INCLUDE_DIR " ${SDL2_INCLUDE_DIR})
message(NOTICE "SDL2_INCLUDE_DIRS " ${SDL2_INCLUDE_DIRS})

# GLM
find_package(glm REQUIRED)
include_directories(${GLM_INCLUDE_DIRS})
message(NOTICE "GLM_INCLUDE_DIRS " ${GLM_INCLUDE_DIRS})

# ASSIMP
#find_package(assimp REQUIRED)
#message(NOTICE "ASSIMP_LIBRARY " ${OPENGL_LIBRARY})
#message(NOTICE "ASSIMP_LIBRARIES " ${OPENGL_LIBRARIES})
#message(NOTICE "ASSIMP_INCLUDE_DIR " ${OPENGL_INCLUDE_DIR})


# Libs
#set(CE_LIBS
#	${OPENGL_LIBRARY}
#	${GLEW_LIBRARIES}
#	${SDL2_LIBRARIES}
#	${ASSIMP_LIBRARIES}
#	${CMAKE_DL_LIBS}
#	#stdc++fs
#
#	PARENT_SCOPE
#)



get_filename_component(GLEW_LIBRARY_DIR ${GLEW_LIBRARIES} DIRECTORY)
message(NOTICE "GLEW_LIBRARY_DIR " ${GLEW_LIBRARY_DIR})
get_filename_component(SDL2_LIBRARY_DIR ${SDL2_LIBRARY} DIRECTORY)
message(NOTICE "SDL2_LIBRARY_DIR " ${SDL2_LIBRARY_DIR})
set(CE_LIB_DIRS
	PUBLIC ${GLEW_LIBRARY_DIR}
	PUBLIC ${SDL2_LIBRARY_DIR}

	PARENT_SCOPE
)



set(CE_LIBS
${OPENGL_LIBRARY}
glew32
SDL2
SDL2main

PARENT_SCOPE
)

# Include
set(CE_INCLUDES
	${OPENGL_INCLUDE_DIR}
	${GLEW_INCLUDE_DIRS}
	${SDL2_INCLUDE_DIRS}
	${GLM_INCLUDE_DIRS}
	${ASSIMP_INCLUDE_DIR}
	PARENT_SCOPE
)